--- a/css/main.css
+++ b/css/main.css
@@ -1,39 +1,199 @@
 body {
+  margin: 0px auto;
   margin: 0;
-}
-.container {
-  max-width: 100%;
+  font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
-.row > .column-11 > .row > .icon {
+nav {
+  background-color: #6a4895;
+  height: 80px;
+  color: #fff;
+  font-size: 90%;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+a:hover {
+  color: #f285fb;
+}
+
+a:active {
+  color: #42c1ff;
+  outline: none;
+}
+
+li{
+  list-style:none;
+}
+
+h1 {
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  text-align: center;
+  color: #ededed;
+  text-shadow: 5px 2px 5px #212020;
+  font-size: 350%;
+  padding-top: 110px;
+}
+
+button{
+  border: none;
+  background-color: #6a4895;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  font-size: 75%;
+  border-radius: 25px;
+  outline: none;
+  padding: 10px;
+  margin-left: 5px;
+}
+
+button:hover {
+  background-color: #0375ac;
+}
+
+button:active {
+  background-color: #42c1ff;
+  color: #9240fb;
+  font-weight: bold;
+}
+
+footer {
+  background-color: #6a4895;
+  margin-top: 30px;
+  font-size: 70%;
+}
+
+h3 {
+  color: #6a4895;
+  padding: 10px;
+  margin: 0;
+}
+
+
+p {
+  font-size: 90%;
+  padding: 0px 0px 10px 10px;
+  margin-top: 0;
+}
+
+h4 {
+  color: #6a4895;
+  padding: 10px;
+  margin: 0;
+}
+
+[class*="column-"] {
+  background-color: transparent;
+}
+
+.container {
+  padding: 10px;
+}
+
+.column-12 {
+  color: #fff;
+  text-align: center;
+  margin-top: 35px;
+  height: 50px;
+}
+
+.title {
+  padding-left: 5%;
+}
+
+.menu, .icon {
+  margin-top: 0;
+}
+
+.row > .column-11 > .icon {
   cursor: pointer;
   display: none;
+  padding-left: 70%
+}
+
+.column-11, .column-9, .menu {
+  margin-top: 0;
+}
+
+.column-11{
+  margin-top: 25px;
 }
 
 .image-header {
-  background-image: url(https://dummyimage.com/1920x400.jpg);
+  background-image: url(../assets/images/mosco.jpg);
+  background-position: center center;
   background-size: cover;
-  background-position: center;
+  background-attachment: fixed;
+  background-color: #858287;
+  background-blend-mode: luminosity;
   height: 400px;
 }
+.cards {
+ margin-top: 10px;
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: center;
+}
 
-@media (max-width: 910px) {
+.column-10 {
+  border-radius: 10px;
+  border: 1px solid #9c91a4;
+  padding-bottom: 10px;
+  max-width: 302px;
+}
+
+.img-card {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+@media (max-width: 995px) {
   .column-10 {
     width: 100%;
   }
 }
 
-@media (max-width: 560px) {
-  .row > .column-11 > .row > .icon {
-    display: inline-block;
+@media (max-width: 910px) {
+  h1{
+    text-align: center center;
+    padding-top: 50px;
   }
+
+  p {
+    padding: 0px 10% 10px 10px;
+  }
+}
+
+@media (max-width: 890px) {
+  h1 {
+    text-align: center center;
+    padding-top: 50px;
+  }
+
+  p {
+    padding: 0px 10% 10px 10px;
+  }
+
+  .row > .column-11 > .icon {
+    display: block;
+  }
+
   .column-9-mobile {
     display: none;
   }
 
-  .column-13, .column-9, .column-10 {
+  .column-14, .column-8, .column-10{
     width: 100%;
   }
-
-
+  .column-11-mobile, .column-11, .column-9, .menu {
+    margin-top: 0;
+  }
+  .column-11-mobile {
+    margin-top: 30px;
+    font-size: 80%;
+  }
 }
